blog title no longer breaks on page zoom

--- a/wp-content/themes/wu-wei/style.css
+++ b/wp-content/themes/wu-wei/style.css
@@ -203,6 +203,7 @@ ul#menu
 }
 .blog-name a {
   color: #FF1300;
+  white-space: nowrap;
 }
 .blog-name a:hover {
   color: #999;
